chore: 解决打包tsx组件类型错误问题

--- a/packages/component-pc/package.json
+++ b/packages/component-pc/package.json
@@ -35,7 +35,8 @@
   },
   "peerDependencies": {
     "element-plus": "*",
-    "vue": "*"
+    "vue": "*",
+    "csstype": "^2.6.20"
   },
   "dependencies": {
     "@yaoxfly-ui-plus/theme-chalk": "workspace:^"
