--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,12 +8,14 @@
     "strict": true, // 启用所有严格类型检查
     "jsx": "preserve",
     "jsxImportSource": "vue",
+    "jsxFactory": "h", // Vue 3 的 JSX factory
+    "jsxFragmentFactory": "Fragment", // Vue 3.x 使用 Fragment 来表示多个元素
     "sourceMap": true,
     "resolveJsonModule": true,
     "isolatedModules": false, //控制是否将每个文件作为单独的模块处理
     "esModuleInterop": true, // 通过创建命名空间实现CommonJS兼容性,使ts的import兼容cjs，不需要import * as
     "allowSyntheticDefaultImports": true, //主要是为了类型检查,配合esModuleInterop使用
-    "skipLibCheck": false, //是否在编译时跳过对声明文件（.d.ts 文件）的类型检查
+    "skipLibCheck": true, //是否在编译时跳过对声明文件（.d.ts 文件）的类型检查
     "allowJs": true
   }
 }
